--- a/SourceGit/SourceGit.csproj
+++ b/SourceGit/SourceGit.csproj
@@ -9,7 +9,7 @@
         <Description>OpenSource GIT client for Windows</Description>
         <Copyright>Copyright © sourcegit 2020. All rights reserved.</Copyright>
         <ApplicationManifest>App.manifest</ApplicationManifest>
-        <Version>1.4</Version>
+        <Version>2.0.0-preview</Version>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
