update<project>: force using "framework-dependent single-file app" mode

--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -2,6 +2,8 @@
     <PropertyGroup>
         <TargetFramework>net5.0-windows</TargetFramework>
         <OutputType>WinExe</OutputType>
+        <SelfContained>false</SelfContained>
+        <PublishSingleFile>true</PublishSingleFile>
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
         <ApplicationIcon>App.ico</ApplicationIcon>
