--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -1,10 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
     <PropertyGroup>
-        <TargetFramework>net5.0-windows</TargetFramework>
+        <TargetFramework>net46</TargetFramework>
         <OutputType>WinExe</OutputType>
-        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-        <SelfContained>false</SelfContained>
-        <PublishSingleFile>true</PublishSingleFile>
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
         <ApplicationIcon>App.ico</ApplicationIcon>
@@ -12,7 +9,7 @@
         <Description>OpenSource GIT client for Windows</Description>
         <Copyright>Copyright © sourcegit 2020. All rights reserved.</Copyright>
         <ApplicationManifest>App.manifest</ApplicationManifest>
-        <Version>1.8</Version>
+        <Version>1.9</Version>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <StartupObject>SourceGit.App</StartupObject>
         <PackageProjectUrl>https://gitee.com/sourcegit/SourceGit.git</PackageProjectUrl>
