--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -16,8 +16,15 @@
         <RepositoryType>Public</RepositoryType>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     </PropertyGroup>
+    
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
       <DebugType>none</DebugType>
       <DebugSymbols>false</DebugSymbols>
     </PropertyGroup>
+
+    <ItemGroup>
+        <TrimmerRootAssembly Include="System.Runtime" />
+        <TrimmerRootAssembly Include="System.Diagnostics.Debug" />
+        <TrimmerRootAssembly Include="System.Runtime.Extensions" />
+    </ItemGroup>
 </Project>
