--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -1,6 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
     <PropertyGroup>
-        <TargetFramework>net5.0-windows</TargetFramework>
+        <TargetFramework>net46</TargetFramework>
         <OutputType>WinExe</OutputType>
         <UseWPF>true</UseWPF>
         <ApplicationIcon>App.ico</ApplicationIcon>
@@ -18,10 +18,7 @@
         <DebugType>none</DebugType>
         <SatelliteResourceLanguages>none</SatelliteResourceLanguages>
     </PropertyGroup>
-
     <ItemGroup>
-        <TrimmerRootAssembly Include="System.Runtime" />
-        <TrimmerRootAssembly Include="System.Runtime.Extensions" />
-        <TrimmerRootAssembly Include="System.Diagnostics.Debug" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 </Project>
