upgrade<Version>: Release 3.2

--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -8,7 +8,7 @@
         <Description>OpenSource GIT client for Windows</Description>
         <Copyright>Copyright © sourcegit 2020. All rights reserved.</Copyright>
         <ApplicationManifest>App.manifest</ApplicationManifest>
-        <Version>3.1</Version>
+        <Version>3.2</Version>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <StartupObject>SourceGit.App</StartupObject>
         <PackageProjectUrl>https://gitee.com/sourcegit/SourceGit.git</PackageProjectUrl>
@@ -18,4 +18,9 @@
         <DebugType>none</DebugType>
         <SatelliteResourceLanguages>none</SatelliteResourceLanguages>
     </PropertyGroup>
+    <ItemGroup>
+        <TrimmerRootAssembly Include="System.Runtime"/>
+        <TrimmerRootAssembly Include="System.Runtime.Extensions"/>
+        <TrimmerRootAssembly Include="System.Runtime.InteropServices"/>
+    </ItemGroup>
 </Project>
