feature<FolderDailog>: use Ookii.Dialog.Wpf instead of Views.Controls.FolderDailog

--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -17,4 +17,7 @@
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <SatelliteResourceLanguages>none</SatelliteResourceLanguages>
     </PropertyGroup>
+    <ItemGroup>
+      <PackageReference Include="Ookii.Dialogs.Wpf" Version="3.1.0" />
+    </ItemGroup>
 </Project>
