--- a/src/SourceGit_48.csproj
+++ b/src/SourceGit_48.csproj
@@ -21,5 +21,6 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="DiffPlex" Version="1.7.0" />
     </ItemGroup>
 </Project>
