--- a/src/SourceGit_48.csproj
+++ b/src/SourceGit_48.csproj
@@ -20,6 +20,6 @@
         <AssemblyName>SourceGit</AssemblyName>
     </PropertyGroup>
     <ItemGroup>
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="System.Text.Json" Version="5.0.2" />
     </ItemGroup>
 </Project>
