--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -18,6 +18,9 @@
         <SatelliteResourceLanguages>none</SatelliteResourceLanguages>
     </PropertyGroup>
     <ItemGroup>
+      <Resource Include="App.ico" />
+    </ItemGroup>
+    <ItemGroup>
         <PackageReference Include="System.Text.Json" Version="6.0.6" />
     </ItemGroup>
 </Project>
