fix<FolderDialog>: using System.Windows.Forms.FolderBrowserDialog instead of Controls.FolderDialog to avoid crashes

--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -3,6 +3,7 @@
         <TargetFrameworks>net48</TargetFrameworks>
         <OutputType>WinExe</OutputType>
         <UseWPF>true</UseWPF>
+        <UseWindowsForms>true</UseWindowsForms>
         <ApplicationIcon>App.ico</ApplicationIcon>
         <Company>sourcegit</Company>
         <Description>OpenSource GIT client for Windows</Description>
