--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -21,10 +21,11 @@
     <PackageReference Include="Avalonia.Desktop" Version="11.0.9" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.9" />
     <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.9" />
+    <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.0.6" />
     <PackageReference Include="Avalonia.Diagnostics" Version="11.0.9" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="AvaloniaEdit.TextMate" Version="11.0.6" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="OneWare.AvaloniaEdit" Version="11.0.7" />
-    <PackageReference Include="OneWare.AvaloniaEdit.TextMate" Version="11.0.7" />
+    <PackageReference Include="TextMateSharp.Grammars" Version="1.0.56" />
   </ItemGroup>
 
   <ItemGroup>
