ci: main branch name in this repository is 'master'; add 'workflow_dispatch' event to enable trigger it manually

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: Continuous Integration
 on:
   push:
     branches:
-      - main
-      - 'feature/**'
+      - master
   pull_request:
-    branches: [main]
+    branches: [master]
+  workflow_dispatch:
 jobs:
   build:
     name: Build
