refactor: external tools and shells
* rename Models.ExternalMergeTools to Models.ExternalMerger
* supports Git Bash/PowerShell/Command Prompt/Default Shell in Windows Terminal

--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -22,8 +22,9 @@
 
   <ItemGroup>
     <AvaloniaResource Include="App.ico" />
-    <AvaloniaResource Include="Resources/Fonts/*" />
     <AvaloniaResource Include="Resources/ExternalToolIcons/*" />
+    <AvaloniaResource Include="Resources/Fonts/*" />
+    <AvaloniaResource Include="Resources/ShellIcons/*" />
   </ItemGroup>
 
   <ItemGroup>
