--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Continuous Integration
 on:
   push:
     branches:
-      - master
+      - develop
   pull_request:
-    branches: [master]
+    branches: [develop]
   workflow_dispatch:
 jobs:
   build:
