Switched workflow branch back to develop

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Continuous Integration
 on:
   push:
     branches:
-      - executable
+      - develop
   pull_request:
-    branches: [executable]
+    branches: [develop]
   workflow_dispatch:
 jobs:
   build-windows:
