--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -44,4 +44,11 @@
     <TrimmerRootAssembly Include="SourceGit" />
     <TrimmerRootAssembly Include="Avalonia.Themes.Fluent" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\CheckoutCommit.axaml.cs">
+      <DependentUpon>CheckoutCommit.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
 </Project>
