--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
           - name : Windows x64
             os: windows-2019
             runtime: win-x64
+          - name : Windows ARM64
+            os: windows-2019
+            runtime: win-arm64
           - name : macOS (Intel)
             os: macos-13
             runtime: osx-x64
