--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,11 +61,8 @@ jobs:
       - name: Rename executable file
         if: ${{ startsWith(matrix.runtime, 'linux-') }}
         run: mv publish/SourceGit publish/sourcegit
-      - name: Package program
-        if: ${{ ! startsWith(matrix.runtime, 'win-') }}
-        run:  tar -cvf sourcegit.${{ matrix.runtime }}.tar -C publish/ .
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: sourcegit.${{ matrix.runtime }}
-          path: ${{ startsWith(matrix.runtime, 'win-') && 'publish' || format('sourcegit.{0}.tar', matrix.runtime) }}
+          path: publish
