--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
   pull_request:
     branches: [develop]
   workflow_dispatch:
+  workflow_call:
 jobs:
   build:
     strategy:
@@ -33,8 +34,6 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
