--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -45,7 +45,8 @@
     <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.1.0" />
     <PackageReference Include="AvaloniaEdit.TextMate" Version="11.1.0" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="TextMateSharp.Grammars" Version="1.0.60" />
+    <PackageReference Include="TextMateSharp" Version="1.0.61" />
+    <PackageReference Include="TextMateSharp.Grammars" Version="1.0.61" />
   </ItemGroup>
 
   <ItemGroup>
