revert:ci: disable unsupported platforms
This reverts commit f1d43d94a4368fb26a0cdbdde0bd00986dc04902.

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -66,8 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # runtime: [linux-x64, linux-arm64]
-        runtime: [linux-x64]
+        runtime: [linux-x64, linux-arm64]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
