enhance: text editor (#365)
* support extra grammars.
* avoid crashing on text editor detached from visual tree

--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <AvaloniaResource Include="App.ico" />
     <AvaloniaResource Include="Resources/Fonts/*" />
+    <AvaloniaResource Include="Resources/Grammars/*" />
     <AvaloniaResource Include="Resources/Images/*" />
     <AvaloniaResource Include="Resources/Images/ExternalToolIcons/*" />
     <AvaloniaResource Include="Resources/Images/ExternalToolIcons/JetBrains/*" />
