--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -33,7 +33,7 @@ jobs:
           path: build/sourcegit_*.zip
   osx-app:
     name: Package OSX app
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     strategy:
       matrix:
         runtime: [osx-x64, osx-arm64]
