feature: workspace support (#445)

--- a/src/SourceGit.csproj
+++ b/src/SourceGit.csproj
@@ -39,6 +39,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.1.3" />
+    <PackageReference Include="Avalonia.Controls.ColorPicker" Version="11.1.3" />
     <PackageReference Include="Avalonia.Desktop" Version="11.1.3" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.3" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.3" />
